--- a/MNIST with CNN.ipynb
+++ b/MNIST with CNN.ipynb
@@ -2,9 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (1.5.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas) (2022.7.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas) (1.23.5)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Looking in indexes: https://download.pytorch.org/whl/cu121\n",
+      "Requirement already satisfied: torch in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (2.0.0)\n",
+      "Requirement already satisfied: torchvision in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (0.15.1)\n",
+      "Requirement already satisfied: filelock in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from torch) (3.11.0)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from torch) (4.5.0)\n",
+      "Requirement already satisfied: sympy in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from torch) (1.11.1)\n",
+      "Requirement already satisfied: networkx in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from torch) (3.1)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from torch) (3.1.2)\n",
+      "Requirement already satisfied: numpy in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from torchvision) (1.23.5)\n",
+      "Requirement already satisfied: requests in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from torchvision) (2.28.2)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from torchvision) (9.5.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from jinja2->torch) (2.1.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests->torchvision) (3.0.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests->torchvision) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests->torchvision) (1.26.14)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests->torchvision) (2022.12.7)\n",
+      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from sympy->torch) (1.3.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install pandas\n",
     "%pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121\n",
@@ -24,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,22 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Net(\n",
-      "  (conv1): Conv2d(1, 4, kernel_size=(3, 3), stride=(1, 1))\n",
-      "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (dropout): Dropout2d(p=0.5, inplace=False)\n",
-      "  (fc1): Linear(in_features=676, out_features=10, bias=True)\n",
-      ")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Building the model (Creating custom CNN 'Net' using nn.Module class)\n",
     "class Net(nn.Module):\n",
@@ -90,13 +108,12 @@
     "        # Logarithmic softmax function applied to produce the output probabilities.\n",
     "        return F.log_softmax(x, dim=1)\n",
     "\n",
-    "model = Net()\n",
-    "print(model)"
+    "model = Net()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,143 +145,27 @@
     "        # Gradients are computed and backproped.\n",
     "        loss.backward()\n",
     "        # Optimizer updates models parameters.\n",
-    "        optimizer.step()\n",
-    "        # Prints current training process when we hit a round number. Loss.item() is scalar value of the loss tensor.\n",
-    "        if batch_idx % 100 == 0:\n",
-    "            print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(epoch, batch_idx * len(data), len(train_loader.dataset), 100. * batch_idx / len(train_loader), loss.item()))"
+    "        optimizer.step()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\torch\\nn\\functional.py:1331: UserWarning: dropout2d: Received a 2-D input to dropout2d, which is deprecated and will result in an error in a future release. To retain the behavior and silence this warning, please use dropout instead. Note that dropout2d exists to provide channel-wise dropout on inputs with 2 spatial dimensions, a channel dimension, and an optional batch dimension (i.e. 3D or 4D inputs).\n",
-      "  warnings.warn(warn_msg)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 [0/60000 (0%)]\tLoss: 2.297239\n",
-      "Train Epoch: 1 [3200/60000 (5%)]\tLoss: 1.195651\n",
-      "Train Epoch: 1 [6400/60000 (11%)]\tLoss: 0.783767\n",
-      "Train Epoch: 1 [9600/60000 (16%)]\tLoss: 0.377728\n",
-      "Train Epoch: 1 [12800/60000 (21%)]\tLoss: 0.475029\n",
-      "Train Epoch: 1 [16000/60000 (27%)]\tLoss: 0.416796\n",
-      "Train Epoch: 1 [19200/60000 (32%)]\tLoss: 0.376504\n",
-      "Train Epoch: 1 [22400/60000 (37%)]\tLoss: 0.239490\n",
-      "Train Epoch: 1 [25600/60000 (43%)]\tLoss: 0.584582\n",
-      "Train Epoch: 1 [28800/60000 (48%)]\tLoss: 0.293359\n",
-      "Train Epoch: 1 [32000/60000 (53%)]\tLoss: 0.452876\n",
-      "Train Epoch: 1 [35200/60000 (59%)]\tLoss: 0.249632\n",
-      "Train Epoch: 1 [38400/60000 (64%)]\tLoss: 0.810044\n",
-      "Train Epoch: 1 [41600/60000 (69%)]\tLoss: 0.356825\n",
-      "Train Epoch: 1 [44800/60000 (75%)]\tLoss: 0.409195\n",
-      "Train Epoch: 1 [48000/60000 (80%)]\tLoss: 0.661929\n",
-      "Train Epoch: 1 [51200/60000 (85%)]\tLoss: 0.376004\n",
-      "Train Epoch: 1 [54400/60000 (91%)]\tLoss: 0.614809\n",
-      "Train Epoch: 1 [57600/60000 (96%)]\tLoss: 0.337292\n",
       "\n",
-      "Test set: Average loss: 0.0076, Accuracy: 9346/10000 (93.46%)\n",
-      "\n",
-      "Train Epoch: 2 [0/60000 (0%)]\tLoss: 0.443617\n",
-      "Train Epoch: 2 [3200/60000 (5%)]\tLoss: 0.299763\n",
-      "Train Epoch: 2 [6400/60000 (11%)]\tLoss: 0.474277\n",
-      "Train Epoch: 2 [9600/60000 (16%)]\tLoss: 0.220926\n",
-      "Train Epoch: 2 [12800/60000 (21%)]\tLoss: 0.381075\n",
-      "Train Epoch: 2 [16000/60000 (27%)]\tLoss: 0.192868\n",
-      "Train Epoch: 2 [19200/60000 (32%)]\tLoss: 0.582255\n",
-      "Train Epoch: 2 [22400/60000 (37%)]\tLoss: 0.455497\n",
-      "Train Epoch: 2 [25600/60000 (43%)]\tLoss: 0.300899\n",
-      "Train Epoch: 2 [28800/60000 (48%)]\tLoss: 0.226092\n",
-      "Train Epoch: 2 [32000/60000 (53%)]\tLoss: 0.354021\n",
-      "Train Epoch: 2 [35200/60000 (59%)]\tLoss: 0.228802\n",
-      "Train Epoch: 2 [38400/60000 (64%)]\tLoss: 0.346643\n",
-      "Train Epoch: 2 [41600/60000 (69%)]\tLoss: 0.296786\n",
-      "Train Epoch: 2 [44800/60000 (75%)]\tLoss: 0.121209\n",
-      "Train Epoch: 2 [48000/60000 (80%)]\tLoss: 0.229294\n",
-      "Train Epoch: 2 [51200/60000 (85%)]\tLoss: 0.387091\n",
-      "Train Epoch: 2 [54400/60000 (91%)]\tLoss: 0.267360\n",
-      "Train Epoch: 2 [57600/60000 (96%)]\tLoss: 0.390889\n",
-      "\n",
-      "Test set: Average loss: 0.0057, Accuracy: 9510/10000 (95.10%)\n",
-      "\n",
-      "Train Epoch: 3 [0/60000 (0%)]\tLoss: 0.340987\n",
-      "Train Epoch: 3 [3200/60000 (5%)]\tLoss: 0.148632\n",
-      "Train Epoch: 3 [6400/60000 (11%)]\tLoss: 0.260725\n",
-      "Train Epoch: 3 [9600/60000 (16%)]\tLoss: 0.815145\n",
-      "Train Epoch: 3 [12800/60000 (21%)]\tLoss: 0.219620\n",
-      "Train Epoch: 3 [16000/60000 (27%)]\tLoss: 0.272995\n",
-      "Train Epoch: 3 [19200/60000 (32%)]\tLoss: 0.224836\n",
-      "Train Epoch: 3 [22400/60000 (37%)]\tLoss: 0.239478\n",
-      "Train Epoch: 3 [25600/60000 (43%)]\tLoss: 0.328848\n",
-      "Train Epoch: 3 [28800/60000 (48%)]\tLoss: 0.092326\n",
-      "Train Epoch: 3 [32000/60000 (53%)]\tLoss: 0.269890\n",
-      "Train Epoch: 3 [35200/60000 (59%)]\tLoss: 0.264382\n",
-      "Train Epoch: 3 [38400/60000 (64%)]\tLoss: 0.347710\n",
-      "Train Epoch: 3 [41600/60000 (69%)]\tLoss: 0.138337\n",
-      "Train Epoch: 3 [44800/60000 (75%)]\tLoss: 0.222344\n",
-      "Train Epoch: 3 [48000/60000 (80%)]\tLoss: 0.273728\n",
-      "Train Epoch: 3 [51200/60000 (85%)]\tLoss: 0.407689\n",
-      "Train Epoch: 3 [54400/60000 (91%)]\tLoss: 0.202914\n",
-      "Train Epoch: 3 [57600/60000 (96%)]\tLoss: 0.287920\n",
-      "\n",
-      "Test set: Average loss: 0.0047, Accuracy: 9572/10000 (95.72%)\n",
-      "\n",
-      "Train Epoch: 4 [0/60000 (0%)]\tLoss: 0.147936\n",
-      "Train Epoch: 4 [3200/60000 (5%)]\tLoss: 0.356995\n",
-      "Train Epoch: 4 [6400/60000 (11%)]\tLoss: 0.126965\n",
-      "Train Epoch: 4 [9600/60000 (16%)]\tLoss: 0.291477\n",
-      "Train Epoch: 4 [12800/60000 (21%)]\tLoss: 0.122926\n",
-      "Train Epoch: 4 [16000/60000 (27%)]\tLoss: 0.195464\n",
-      "Train Epoch: 4 [19200/60000 (32%)]\tLoss: 0.113068\n",
-      "Train Epoch: 4 [22400/60000 (37%)]\tLoss: 0.317988\n",
-      "Train Epoch: 4 [25600/60000 (43%)]\tLoss: 0.617713\n",
-      "Train Epoch: 4 [28800/60000 (48%)]\tLoss: 0.246896\n",
-      "Train Epoch: 4 [32000/60000 (53%)]\tLoss: 0.258319\n",
-      "Train Epoch: 4 [35200/60000 (59%)]\tLoss: 0.349842\n",
-      "Train Epoch: 4 [38400/60000 (64%)]\tLoss: 0.144544\n",
-      "Train Epoch: 4 [41600/60000 (69%)]\tLoss: 0.157720\n",
-      "Train Epoch: 4 [44800/60000 (75%)]\tLoss: 0.357420\n",
-      "Train Epoch: 4 [48000/60000 (80%)]\tLoss: 0.121758\n",
-      "Train Epoch: 4 [51200/60000 (85%)]\tLoss: 0.315285\n",
-      "Train Epoch: 4 [54400/60000 (91%)]\tLoss: 0.369198\n",
-      "Train Epoch: 4 [57600/60000 (96%)]\tLoss: 0.169195\n",
-      "\n",
-      "Test set: Average loss: 0.0042, Accuracy: 9604/10000 (96.04%)\n",
-      "\n",
-      "Train Epoch: 5 [0/60000 (0%)]\tLoss: 0.460604\n",
-      "Train Epoch: 5 [3200/60000 (5%)]\tLoss: 0.162861\n",
-      "Train Epoch: 5 [6400/60000 (11%)]\tLoss: 0.448083\n",
-      "Train Epoch: 5 [9600/60000 (16%)]\tLoss: 0.291652\n",
-      "Train Epoch: 5 [12800/60000 (21%)]\tLoss: 0.260251\n",
-      "Train Epoch: 5 [16000/60000 (27%)]\tLoss: 0.322104\n",
-      "Train Epoch: 5 [19200/60000 (32%)]\tLoss: 0.133354\n",
-      "Train Epoch: 5 [22400/60000 (37%)]\tLoss: 0.118662\n",
-      "Train Epoch: 5 [25600/60000 (43%)]\tLoss: 0.612642\n",
-      "Train Epoch: 5 [28800/60000 (48%)]\tLoss: 0.372269\n",
-      "Train Epoch: 5 [32000/60000 (53%)]\tLoss: 0.275731\n",
-      "Train Epoch: 5 [35200/60000 (59%)]\tLoss: 0.306439\n",
-      "Train Epoch: 5 [38400/60000 (64%)]\tLoss: 0.199274\n",
-      "Train Epoch: 5 [41600/60000 (69%)]\tLoss: 0.292305\n",
-      "Train Epoch: 5 [44800/60000 (75%)]\tLoss: 0.181421\n",
-      "Train Epoch: 5 [48000/60000 (80%)]\tLoss: 0.128105\n",
-      "Train Epoch: 5 [51200/60000 (85%)]\tLoss: 0.341167\n",
-      "Train Epoch: 5 [54400/60000 (91%)]\tLoss: 0.416178\n",
-      "Train Epoch: 5 [57600/60000 (96%)]\tLoss: 0.457235\n",
-      "\n",
-      "Test set: Average loss: 0.0041, Accuracy: 9616/10000 (96.16%)\n",
+      "Test set: Average loss: 0.0037, Accuracy: 9655/10000 (96.55%)\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "torch.set_num_threads(2)\n",
+    "\n",
     "# Evaluating the trained model\n",
     "def test(model, device, test_loader):\n",
     "    # Sets model in evaluation mode (disables dropout and batch normalization).\n",
@@ -288,14 +189,16 @@
     "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
     "    # Obtains average loss.\n",
     "    test_loss /= len(test_loader.dataset)\n",
-    "    # Average loss and accuracy are printed.\n",
-    "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.2f}%)\\n'.format(test_loss, correct, len(test_loader.dataset), 100. * correct / len(test_loader.dataset)))\n",
+    "    return test_loss, correct\n",
+    "\n",
     "# Runs training process for n-1 epochs.\n",
     "for epoch in range(1, 6):\n",
-    "    # Train function called to train the model on training dataset.\n",
     "    train(model, device, train_loader, optimizer, epoch)\n",
-    "    # Test function called to evaluate models performance on test dataset.\n",
-    "    test(model, device, test_loader)"
+    "\n",
+    "\n",
+    "# Calls the test function after all the epochs and then prints the result\n",
+    "test_loss, correct = test(model, device, test_loader)\n",
+    "print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.2f}%)\\n'.format(test_loss, correct, len(test_loader.dataset), 100. * correct / len(test_loader.dataset)))"
    ]
   }
  ],
